2021-10-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/utf8_font.rb: Added

2021-10-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator: Add ".by_value" to struct arguments
	* generator: Add struct alias hook
	* examples: Added
	* examples/shapes_basic_shapes.rb: Added
	* generator: Now correctly handles variable-length arguments (TextFormat and TraceLog)
	* Added helper functions (Color.from_u8, Vector2.create, etc.)
	* examples/core_3d_camera_first_person.rb: Added
	* generator: Now correctly handles return values
	* Bugfix: Removed duplicated enums / Names of some structs must start with capital letter

2021-10-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Experimental raylib header parser

2021-10-17  vaiorabbit  <http://twitter.com/vaiorabbit>

	* initial commit